--- a/styles/index.html
+++ b/styles/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
     <title>Donate Today </title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
     <section class="bannar">
         <div class="bannar-container">
             <h1 class="bannar-tittle">Let's Help Those Who Are More In Need</h1>
-            <p class="bannar-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur praesentium possimus ad sunt illo laudantium blanditiis adipisci. Ullam, corrupti!</p>
+            <p class="bannar-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+                praesentium possimus ad sunt illo laudantium blanditiis adipisci. Ullam, corrupti!</p>
             <button class="primary-btn">Donate Now</button>
         </div>
     </section>
@@ -20,7 +27,8 @@
         <div class="container">
             <div class="section-some">
                 <h1 class="section-tittle">Donte Today</h1>
-               <p class="section-decsription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ratione sapiente earum fugiat dictaad exercitationem velit!</p>
+                <p class="section-decsription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ratione
+                    sapiente earum fugiat dictaad exercitationem velit!</p>
             </div>
             <div class="amountBox">
                 <ul>
@@ -31,7 +39,68 @@
                     <li><a href="#">200K</a></li>
                 </ul>
             </div>
+            <p class="amount">Other Amount (Taka)</p>
+            <hr>
+            <button class="primary-btn">Donate Now</button>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="section-some">
+                <h1 class="section-tittle">Our Donte Plan</h1>
+                <p class="section-decsription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ratione
+                    sapiente earum fugiat dictaad exercitationem velit!</p>
+                <div class="items">
+                    <div class="item one">
+                        <img src="../icons/food.png" alt="">
+                        <div class="">
+                            <h2>Food for a family</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error harum dolor rem. Facilis,
+                                fugiat placeat!</p>
+                        </div>
+                    </div>
+                    <div class="item two">
+                        <img src="../icons/shelter.png" alt="">
+                        <div class="">
+                            <h2>Shelter for a family</h2>
+                            <p>Vero dolorem inventore ea, quasi quaerat reprehenderit debitis tempore nostrum porro
+                                explicabo. Distinctio, ratione doloribus?</p>
+                        </div>
+                    </div>
+                    <div class="item three">
+                        <img src="../icons/Frame-1.png" alt="">
+                        <div class="">
+                            <h2>Education for a family</h2>
+                            <p>Modi sapiente asperiores quis sit quod magni facilis earum quo, a deleniti dolore aliquam
+                                aperiam.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container space">
+        <div class="depend">
+            <div class="content">
+                <h2>Their lives on you donation.</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptas, similique accusantium quaerat velit amet. Vitae cupiditate autem consequuntur ipsa expedita praesentium, eos voluptas quaerat.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia expedita optio fugiat provident aliquam voluptatibus.</p>
+                <button class="primary-btn">How To Contribute?</button>
+            </div>
+            <img width="500px"  src="../images/donation0.jpg" alt="">
+        </div>
+    </section>
+    <section class="container space">
+        <div class="depend">
+            <img width="500px"  src="../images/donation2.jpg" alt="">
+            <div class="content">
+                <h2>They need us to survive.</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptas, similique accusantium quaerat velit amet. Vitae cupiditate autem consequuntur ipsa expedita praesentium, eos voluptas quaerat.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia expedita optio fugiat provident aliquam voluptatibus.</p>
+                <button class="primary-btn">How To Contribute?</button>
+            </div>
         </div>
     </section>
 </body>
+
 </html>
