--- a/styles/index.html
+++ b/styles/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
     <title>Donate Today </title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -101,6 +102,21 @@
             </div>
         </div>
     </section>
+
+    <section class="contact">
+        <div class="container">
+            <h1 class="section-tittle">Donte Today</h1>
+            <p class="section-decsription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ratione sapiente earum fugiat dictaad exercitationem velit!</p>
+            <div class="send">
+                <input class="mail" type="email" placeholder="Email">
+                <input class="submit" type="submit" value="Submit">
+            </div> 
+        </div>
+    </section>
+    <footer class="footer">
+        <h2>Be Humble</h2>
+        <p>I'm gonna do it.</p>
+    </footer>
 </body>
 
 </html>
