--- a/styles/index.html
+++ b/styles/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </section>
-
+<!-- Contact Section -->
     <section class="contact">
         <div class="container">
             <h1 class="section-tittle">Donte Today</h1>
@@ -113,6 +113,7 @@
             </div> 
         </div>
     </section>
+    <!-- Footerg -->
     <footer class="footer">
         <h2>Be Humble</h2>
         <p>I'm gonna do it.</p>
@@ -120,3 +121,5 @@
 </body>
 
 </html>
+
+
