--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
     <title>Donate Today </title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
